force-app/main/default/objects/Stripe_Subscription__c/fields/Checkout_URL__c.field-meta.xml
<CustomField>
    <fullName>Checkout_URL__c</fullName>
    <description>Payment link generated for pending subscriptions. Click to open Stripe checkout page where customers can complete their payment.</description>
    <inlineHelpText>Click to open payment link for customer. This URL is automatically generated when subscription status is set to &quot;Pending&quot;.</inlineHelpText>
    <label>Checkout URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>