force-app/main/default/objects/Stripe_Subscription__c/fields/Stripe_Checkout_Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Checkout_Session_ID__c</fullName>
    <description>Stripe checkout session identifier for tracking payment completion and webhook processing.</description>
    <inlineHelpText>Unique identifier for the Stripe checkout session. Used for webhook processing and payment tracking.</inlineHelpText>
    <label>Stripe Checkout Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>