force-app/main/default/objects/Stripe_Subscription__c/fields/Stripe_Price__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Price__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the Stripe Price for this subscription</description>
    <label>Stripe Price</label>
    <referenceTo>Stripe_Price__c</referenceTo>
    <relationshipLabel>Stripe Subscriptions</relationshipLabel>
    <relationshipName>Stripe_Subscriptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField> 